--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build:css": "tailwindcss -i src/styles.css -o src/output.css",
-    "watch:css": "tailwindcss -i src/styles.css -o src/output.css --watch",
+    "build:css": "tailwindcss -i src/assets/styles/styles.css -o src/assets/styles/output.css",
+    "watch:css": "tailwindcss -i src/assets/styles/styles.css -o src/assets/styles/output.css --watch",
     "dev": "concurrently \"npm run watch:css\" \"npm run start\""
   },
   "keywords": [],
